--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -6,6 +6,11 @@ $Very_dark_cyan: hsl(179, 100%, 13%);
 $Transparent_white : hsla(0, 0%, 100%, 0.75);
 $Very_light_gray : hsl(0, 0%, 95%);
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body{
     font-family: $Font1;
@@ -18,6 +23,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 30px;
 
     .container{
         display: flex;
@@ -25,10 +31,14 @@ main{
         
 
         &__card-1,&__card-2,&__card-3{
-            width: 200px;
-            padding: 40px;
+            width: 280px;
+            padding: 35px;
+            img{
+                margin-top: 10px;
+            }
 
             h2{
+                margin: 30px 0;
                 font-family: $Font2;
                 font-weight: 700;
                 font-size: 2.3em;
@@ -36,13 +46,15 @@ main{
                 text-transform: uppercase;
             }
             p{
+                margin-bottom: 30px;
                 font-weight: 400;
                 font-size: .9em;
                 line-height: 1.5rem;
                 color: $Transparent_white;
-                height: 140px;
+                height: 120px;
                 @media (min-width:769px){
                     height: 180px;
+                    margin-bottom: 30px;
                 } 
             }
             a{
@@ -51,10 +63,15 @@ main{
                 border: 1px solid #fff;
                 padding: 10px 20px;
                 border-radius: 30px;
+                margin-bottom: 10px;
+                display: inline-block;
                 &:hover{
                     background-color: transparent;
                     color: #fff;
                 }
+            }
+            @media (min-width:769px){
+                
             }
         }
 
